--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="default_timeout">60</string>
-
+	<string name="button_notification_title">Klingelton</string>
 </resources>
